--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,21 +1,37 @@
 /* Styled by Brendon Carrasquillo. Started 11/30/2017 at 7:45 pm */
 
 body {
+  display: flex;
+  justify-content: center;
+  width: 100%;
   background-color: black;
   font-family: Helvetica;
   font-size: 22px;
   color: seashell;
   opacity: 0.9;
-
+  text-align: center;
 }
+
+div {
+  border: 0px solid white;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
 
 /* Start Header */
 .header {
   display: flex;
   justify-content: space-between;
   height: 69px;
-  border: 1px solid seashell;
+  border-bottom: 1px solid seashell;
   position: fixed;
+  background-color: black;
+  z-index: 15;
   width: 100%;
   top: 0px;
   right: 0px;
@@ -45,21 +61,151 @@ body {
 }
 
 
-
 /* Start "Mission" Container */
+.mission {
+  display: flex;
+  justify-content: center;
+  margin-top: 63px;
+  flex-shrink: 0;
+  height: 700px;
+  width: 1200px;
+  background-image: url("../images/img-mission-background.jpg");
+  align-items: center;
+}
 
+.mission-heading {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  width: 100%;
+  background-color: black;
+  color: seashell;
+  text-align: center;
+}
+
+.mission-heading h4 {
+  margin: 5px 10px;
+  padding: 0px;
+}
+
+.mission-heading h2 {
+  margin: 5px 10px;
+  padding: 0px;
+}
 
 
 /* Start "Tea of the Month" Container */
+.featuredtea {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 1200px;
+  flex-shrink: 0;
+  padding-bottom: 60px;
+  padding-top: 60px;
+}
 
+.featuredtea img {
+  height: 200px;
+  width: 300px;
+}
+
+.featuredtea h2,
+.featuredtea h4 {
+  margin: 5px 10px;
+  padding: 0px;
+}
+
+.featuredtea-heading {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 1000px;
+}
+
+.featuredtea-heading h2 {
+  margin: 5px 10px;
+  padding: 0px;
+}
+
+.featuredtea-heading h4 {
+  margin: 5px 10px;
+  padding: 0px;
+}
+
+.teas-row-1 {
+  width: 1000px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.teas-row-2 {
+  width: 1000px;
+  display: flex;
+  justify-content: center;
+}
+
+.tea-4-container,
+.tea-5-container {
+  margin: 10px 10px;
+}
 
 
 /* Start "Locations" Container */
+.locations {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url("../images/img-locations-background.jpg");
+  height: 500px;
+  width: 1200px;
+  text-align: center;
+  color: seashell;
+}
 
+.locations-header {
+  display: flex;
+  margin-top: 50px;
+}
 
+.locations-header h2{
+  margin: 0px 0px;
+  padding: 0px 0px;
+}
+
+.location-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 20px;
+  width: 980px;
+}
+
+.location {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  height: 300px;
+  width: 300px;
+  text-align: center;
+  opacity: 1;
+  background-color: black;
+}
 
 /* Start "Contact" Container */
-
+.contact {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  height: 200px;
+}
 
 
 /* START Footer */
+footer {
+  margin-left: 20px;
+  text-align: left;
+}
